Remove address bar when launched from iOS springboard

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Dvorak Flashcard</title>
   <link rel="icon" type="image/png" href="favicon.ico">
   <link rel="apple-touch-icon" href="ios_icon.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <script type="text/javascript" src="jquery.js"></script>
   <script type="text/javascript" src="dvorak.js"></script>
   <style type="text/css">
