--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-  <title>Dvorak Flashcard</title>
+  <title>August</title>
   <link rel="icon" type="image/png" href="favicon.ico">
   <link rel="apple-touch-icon" href="ios_icon.png" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -41,7 +41,7 @@
       color: #bbb;;
       font-family: Helvetica, sans-serif;
       font-size: 48px;
-      margin-left: 5px;
+      margin: 0px;
     }
     #finish {
       margin-top: 0.5em;
